[package]
name = "signal_scuffle"
version = "0.1.0"
publish = false
authors = ["Idan Arye <idanarye@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_asset_loader = { version = "0.11" }
rand = "0.8.3"
bevy-yoleck = { version = "0.2.0", features = ["vpeol_2d"] }
bevy_egui = "0.14.0"
bevy-egui-kbgp = "0.6.0"
clap = { version = "3.1.18", features = ["derive"] }
bevy_rapier2d = "0.14.1"
ezinput = "0.3.6"
ezinput_macros = "0.2.0"
bevy_pkv = "0.5.0"
serde = "1.0.137"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
